--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-./Terraform/terraform
-./Terraform/terraform.lock.hcl
+./Terraform/.terraform
+./Terraform/.terraform.lock.hcl
 ./Terraform/terraform*
 ./Terraform/*.json
