--- a/Kuberentes/backend-db.yaml
+++ b/Kuberentes/backend-db.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: back-api
+  name: backend-db
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: back-api
+      app: backend-db
   template:
     metadata:
       labels:
-        app: back-api
+        app: backend-db
     spec:
       containers:
-        - name: back-api
-          image: redis
+        - name: backend-db
+          image: gcr.io/omega-fabric-348508/redis-image
           ports:
             - containerPort: 6379
               name: redis
