--- a/Kuberentes/cluster-ip-svc-db.yaml
+++ b/Kuberentes/cluster-ip-svc-db.yaml
@@ -1,11 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: back-api
+  name: backend-service
 spec:
   type: ClusterIP
   ports:
     - port: 6379
       targetPort: 6379
   selector:
-    app: back-api
+    app: backend-db
+
+
