--- a/Kuberentes/frontend-app.yaml
+++ b/Kuberentes/frontend-app.yaml
@@ -26,7 +26,7 @@ spec:
             - name: PORT
               value: "9000"
             - name: REDIS_HOST
-              value:  "10.52.11.150" #backend service Cluster IP
+              value:  backend-service.default.svc.cluster.local  #backend service Cluster IP name
             - name: REDIS_PORT
               value: "6379"
             - name: REDIS_DB
